--- a/Web.config
+++ b/Web.config
@@ -73,8 +73,7 @@
     <providers>
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
       
-    <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.EntityFramework, Version=8.0.20.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d">
-      </provider></providers>
+    </providers>
   </entityFramework>
   <connectionStrings>
     <add name="OrionAdminEntities" connectionString="metadata=res://*/Data.OrionAdmin.csdl|res://*/Data.OrionAdmin.ssdl|res://*/Data.OrionAdmin.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=10.19.10.5\ORIONMSSQL;initial catalog=OrionAdmin;persist security info=True;user id=OrionAdmin;password=L0gan2015;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
