--- a/packages.config
+++ b/packages.config
@@ -24,6 +24,7 @@
   <package id="Microsoft.EntityFrameworkCore" version="3.1.3" targetFramework="net472" />
   <package id="Microsoft.EntityFrameworkCore.Abstractions" version="3.1.3" targetFramework="net472" />
   <package id="Microsoft.EntityFrameworkCore.Analyzers" version="3.1.3" targetFramework="net472" />
+  <package id="Microsoft.EntityFrameworkCore.Relational" version="3.1.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Caching.Abstractions" version="3.1.3" targetFramework="net472" />
   <package id="Microsoft.Extensions.Caching.Memory" version="3.1.3" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration" version="3.1.3" targetFramework="net472" />
@@ -39,7 +40,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="MySql.Data" version="8.0.20" targetFramework="net472" />
-  <package id="MySql.Data.EntityFramework" version="8.0.20" targetFramework="net472" />
+  <package id="MySql.Data.EntityFrameworkCore" version="8.0.20" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="popper.js" version="1.16.1" targetFramework="net472" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net472" />
